plugins {
    id "com.github.ben-manes.versions" version "0.42.0"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
    id 'org.springframework.boot' version "2.7.1"
}

apply plugin: 'eclipse'
apply plugin: 'java'

group = 'com.foilen'
version = System.getenv('VERSION') ?: 'master-SNAPSHOT'
ext.isReleaseVersion = !version.endsWith("SNAPSHOT")

repositories {
    mavenLocal()
    mavenCentral()
}

sourceCompatibility = 11

eclipse {
    classpath {
        downloadSources = true
        downloadJavadoc = true
    }
}

dependencies {
    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation "com.foilen:jl-smalltools:1.7.0"
    implementation "com.foilen:database-tools:1.0.0"
    implementation "com.foilen:foilen-infra-api:0.16.0"
    implementation "com.foilen:foilen-infra-plugin-core:0.14.0"
    implementation "com.foilen:foilen-infra-plugins-core:0.22.0"
    implementation "com.google.guava:guava:31.1-jre"
    implementation "dnsjava:dnsjava:3.5.1"
    implementation "javax.xml.bind:jaxb-api"
    implementation "com.jcraft:jsch:0.1.55"
    implementation "org.apache.commons:commons-lang3"
    implementation "org.apache.httpcomponents:httpclient"
    implementation "org.freemarker:freemarker"
    implementation "org.jsoup:jsoup:1.15.1"
    implementation "org.shredzone.acme4j:acme4j-client:2.13"
    implementation "org.shredzone.acme4j:acme4j-utils:2.13"
    implementation "org.springframework.data:spring-data-jpa"
    implementation "org.springframework.shell:spring-shell-starter:2.0.1.RELEASE"
    implementation "org.springframework:spring-web"

    // Microsoft Azure
    implementation 'com.azure:azure-identity:1.5.2'
    implementation "com.azure.resourcemanager:azure-resourcemanager:2.16.0"
    implementation "com.azure.resourcemanager:azure-resourcemanager-mariadb:1.0.0-beta.1"

    testImplementation "junit:junit"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

bootJar {
    classifier = 'boot'
}

test {
    useJUnit()
}
